Add: explore page and styles

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                         </div>
                     </article>
                     <article>
-                        <img src="./assets/img/releases/releases.png" alt="Portada de Midnight City">
+                        <img src="./assets/img/releases/M83-Midnight_City.png" alt="Portada de Midnight City">
                         <div>
                             <h3>Midnight City</h3>
-                            <p>Neon Parade · SynthTecITB</p>
+                            <p>M83 · SynthPop</p>
                             <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
@@ -127,7 +127,7 @@
                         <img src="./assets/img/releases/releases.png" alt="Portada de Oblivion">
                         <div>
                             <h3>Oblivion</h3>
-                            <p>M83 · Synth</p>
+                            <p>Neon Parade · SynthTecITB</p>
                             <a href="./detalle.html#release">Más info</a>
                         </div>
                     </article>
@@ -137,8 +137,8 @@
         <section class="artist" id="artist">
             <div>
                 <header>
-                    <h2>Artistas destacados</h2>
-                    <a href="./festivales.html#artist">Var Ranking</a>
+                    <h2>Artistas destacadas</h2>
+                    <a href="./festivales.html#artistRank">Var Ranking</a>
                 </header>
                 <div>
                     <article>
@@ -146,7 +146,7 @@
                             <img src="./assets/img/artists/artist.png" alt="Artista Kala Nova">
                             <div>
                                 <h3>Kala Nova</h3>
-                                <p>Electropop · <span>★★★★☆</span></p>
+                                <p>Electropop · <span>&starf;&starf;&starf;&starf;&star;</span></p>
                             </div>
                         </a>
                     </article>
@@ -155,7 +155,7 @@
                             <img src="./assets/img/artists/artist.png" alt="Artista Atlas">
                             <div>
                                 <h3>Atlas</h3>
-                                <p>Synthpop · <span>★★★★☆</span></p>
+                                <p>Synthpop · <span>&starf;&starf;&starf;&starf;&star;</span></p>
                             </div>
                         </a>
                     </article>
@@ -164,7 +164,7 @@
                             <img src="./assets/img/artists/artist.png" alt="Artista Vértigo">
                             <div>
                                 <h3>Vértigo</h3>
-                                <p>Electrónica · <span>★★★★★</span></p>
+                                <p>Electrónica · <span>&starf;&starf;&starf;&starf;&starf;</span></p>
                             </div>
                         </a>
                     </article>
@@ -173,7 +173,16 @@
                             <img src="./assets/img/artists/artist.png" alt="Artista Lykke">
                             <div>
                                 <h3>Lykke</h3>
-                                <p>Indie · <span>★★★★☆</span></p>
+                                <p>Indie · <span>&starf;&starf;&starf;&starf;&star;</span></p>
+                            </div>
+                        </a>
+                    </article>
+                    <article>
+                        <a href="./detalle.html#artist">
+                            <img src="./assets/img/artists/M83.png" alt="Artista M83">
+                            <div>
+                                <h3>M83</h3>
+                                <p>SynthPop · <span>&starf;&starf;&starf;&starf;&star;</span></p>
                             </div>
                         </a>
                     </article>
@@ -182,7 +191,7 @@
                             <img src="./assets/img/artists/artist.png" alt="Artista Neon Parade">
                             <div>
                                 <h3>Neon Parade</h3>
-                                <p>SynthTecITB · <span>★★★★☆</span></p>
+                                <p>SynthTecITB · <span>&starf;&starf;&starf;&starf;&star;</span></p>
                             </div>
                         </a>
                     </article>
@@ -191,7 +200,7 @@
                             <img src="./assets/img/artists/artist.png" alt="Artista Halo">
                             <div>
                                 <h3>Halo</h3>
-                                <p>Alt Pop · <span>★★★★☆</span></p>
+                                <p>Alt Pop · <span>&starf;&starf;&starf;&starf;&star;</span></p>
                             </div>
                         </a>
                     </article>
@@ -200,7 +209,7 @@
                             <img src="./assets/img/artists/artist.png" alt="Artista Marea Azul">
                             <div>
                                 <h3>Marea Azul</h3>
-                                <p>Dream pop · <span>★★★★☆</span></p>
+                                <p>Dream pop · <span>&starf;&starf;&starf;&starf;&star;</span></p>
                             </div>
                         </a>
                     </article>
@@ -209,7 +218,7 @@
                             <img src="./assets/img/artists/artist.png" alt="Artista Arpeggio">
                             <div>
                                 <h3>Arpeggio</h3>
-                                <p>Ambient · <span>★★★★☆</span></p>
+                                <p>Ambient · <span>&starf;&starf;&starf;&starf;&star;</span></p>
                             </div>
                         </a>
                     </article>
@@ -294,7 +303,7 @@
                 <li><p>Atlas -&nbsp;<span>Neon Skies</span></p></li>
                 <li><p>Vértigo -&nbsp;<span>Altitude</span></p></li>
                 <li><p>Marea Azul -&nbsp;<span>Mar de Sonidos</span></p></li>
-                <li><p>Neon Parade -&nbsp;<span>Midnight City</span></p></li>
+                <li><p>M83 -&nbsp;<span>Midnight City</span></p></li>
                 <li><p>Halo -&nbsp;<span>Stardust</span></p></li>
                 <li><p>Lykke -&nbsp;<span>Paper TecITBs</span></p></li>
                 <li><p>Dorian -&nbsp;<span>Solaris</span></p></li>
